Added link to resolver

--- a/DhBenelux.ipynb
+++ b/DhBenelux.ipynb
@@ -619,13 +619,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DDD_010725137_0005_articletext.xml\n",
+      "DDD_010725137_0001_articletext.xml\n",
+      "DDD_010725137_0002_articletext.xml\n",
+      "DDD_010725137_0004_articletext.xml\n",
+      "DDD_010725137_0003_articletext.xml\n",
+      "DDD_010725137_0006_articletext.xml\n"
+     ]
+    }
+   ],
    "source": [
     "for file in os.listdir('data/1712/01/01/DDD_ddd_010725137_mpeg21'):\n",
     "    if file.endswith('_articletext.xml'):\n",
     "        print(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hardcore Delpher users will recognize the following: DDD_ddd_010725137_mpeg21,\n",
+    "this is because this is the unique identifier of the newspaper.\n",
+    "\n",
+    "To get OCR straight from the KB enviorment, rewite it to an URL like so:\n",
+    "resolver.kb.nl/resolve?urn=ddd:010725137:mpeg21:a0001:ocr (This is the first OCR file)."
    ]
   },
   {
@@ -708,7 +732,7 @@
     "        \n",
     "\n",
     "for word in word_list:\n",
-    "    if word_list[word] > 2 and word.isalpha() and len(word)> 4:\n",
+    "    if word > 2 and word.isalpha() and len(word)> 4:\n",
     "        print(word, word_list[word])\n",
     "        \n",
     "#\n",
