Added external libs.

--- a/DhBenelux.ipynb
+++ b/DhBenelux.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "Overview of most important types:\n",
     "\n",
-    "int, str, list, dict, boolean, set. (They don't mix)"
+    "int / float, str, list, dict, boolean, set. (They don't mix)"
    ]
   },
   {
@@ -116,6 +116,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Error's can be dealt with, indentations matter.\n",
+    "try:\n",
+    "    10 / 0\n",
+    "except:\n",
+    "    error = \"404 Math not found\"\n",
+    "print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(1/10)\n",
+    "print(round(1/10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -128,7 +152,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "str(1) + \"monkey\""
+    "print(str(1) + \"monkey\")\n",
+    "print(int(\"10\"))\n",
+    "\n",
+    "try:\n",
+    "    int(\"10a\")\n",
+    "except:\n",
+    "    print(\"Error while casting\")\n",
+    "    "
    ]
   },
   {
@@ -203,7 +234,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = {}\n",
+    "a = {} # Variable names are free for the taking,\n",
+    "# some are reserved. (max, min, slef, id, int, str.. (Color will change))\n",
+    "\n",
     "print(type(a))"
    ]
   },
@@ -619,22 +652,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DDD_010725137_0005_articletext.xml\n",
-      "DDD_010725137_0001_articletext.xml\n",
-      "DDD_010725137_0002_articletext.xml\n",
-      "DDD_010725137_0004_articletext.xml\n",
-      "DDD_010725137_0003_articletext.xml\n",
-      "DDD_010725137_0006_articletext.xml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for file in os.listdir('data/1712/01/01/DDD_ddd_010725137_mpeg21'):\n",
     "    if file.endswith('_articletext.xml'):\n",
@@ -976,7 +996,7 @@
     "\n",
     "parser = et.XMLParser(recover=True)\n",
     "\n",
-    "with codecs.open('data/1712/01/01/DDD_ddd_010725137_mpeg21/didl.xml', 'r', encoding='UTF-8') as fh:\n",
+    "with open('data/1712/01/01/DDD_ddd_010725137_mpeg21/didl.xml', 'r') as fh:\n",
     "    data = et.ElementTree(et.fromstring(fh.read(), parser=parser))\n",
     "    for item in data.iter():\n",
     "        tag = str(item.tag.lower())\n",
@@ -1031,7 +1051,18 @@
     "            date = item.text\n",
     "        if item.tag.endswith(\"nativePageNumber\"):\n",
     "            pages.append(item.text)\n",
-    "    print(title, date, pages)"
+    "    print(title, date, pages)\n",
+    "\n",
+    "#\n",
+    "# ?\n",
+    "# Can you create a graph from this data, showing the nr of pages per day."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Common seen libraries"
    ]
   },
   {
@@ -1039,7 +1070,84 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pprint # Does not matter much in notebook, but does in command line.\n",
+    "pprint.pprint({\"test\" : [1,2,3,4], \"test1\" : {\"test1\" : \"test2\"}})\n",
+    "print({\"test\" : [1,2,3,4], \"test1\" : {\"test1\" : \"test2\"}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "random.random() # Value (float) between 0.0 and 1.0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.randrange(90,100) # Integer beteewn 90,100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.choice([1,2,3,4,]) # Select a random element from a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "time.sleep(random.random()) # Take a mini-nap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "for i in range(10): # Do the following 10 times.\n",
+    "    time.sleep(random.random())\n",
+    "end_time = time.time()\n",
+    "print(end_time - start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.now().strftime(\"%Y-%m-%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "response = requests.get(\"https://www.kb.nl/\")\n",
+    "print(response.status_code)\n",
+    "print(response.content)"
+   ]
   }
  ],
  "metadata": {
