--- a/DhBenelux.ipynb
+++ b/DhBenelux.ipynb
@@ -668,7 +668,7 @@
     "Hardcore Delpher users will recognize the following: DDD_ddd_010725137_mpeg21,\n",
     "this is because this is the unique identifier of the newspaper.\n",
     "\n",
-    "To get OCR straight from the Delpher enviorment, rewite it to an URL like so:\n",
+    "To get context straight from the Delpher enviorment, rewite it to an URL like so:\n",
     "resolver.kb.nl/resolve?urn=ddd:010725137:mpeg21:a0001"
    ]
   },
